--- a/about.html
+++ b/about.html
@@ -20,8 +20,7 @@
    <link rel="stylesheet" href="assets/css/font-awesome-pro.css">
    <link rel="stylesheet" href="assets/css/flaticon_shofy.css">
    <link rel="stylesheet" href="assets/css/spacing.css">
-   <link rel="stylesheet" href="assets/css/hero-slider.css">
-   <link rel="stylesheet" href="assets/css/scroll-animations.css">
+   <link rel="stylesheet" href="assets/css/home.css">
    <link rel="stylesheet" href="assets/css/main.css">
    <link rel="stylesheet" href="assets/css/rtl-custom.css">
    <link rel="stylesheet" href="assets/css/mobile-fixes.css">
