Remove left and right animations from home sections

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       <!-- Makhawir Sections Start -->
 
       <!-- 1. Silk Makhawir Section -->
-      <section class="tp-product-area scroll-animate-left">
+      <section class="tp-product-area scroll-animate">
          <div class="container">
             <div class="row">
                <div class="col-xl-12">
@@ -443,7 +443,7 @@
       </section>
 
       <!-- 2. Cotton Makhawir Section -->
-      <section class="tp-product-area scroll-animate-right">
+      <section class="tp-product-area scroll-animate">
          <div class="container">
             <div class="row">
                <div class="col-xl-12">
